--- a/Milestone_1.ipynb
+++ b/Milestone_1.ipynb
@@ -92,7 +92,7 @@
     "        \n",
     "        self.driver.quit()\n",
     "\n",
-    "        return (list_of_hmtl_links)\n",
+    "         (list_of_hmtl_links)\n",
     "    \n",
     "def scrapper_method():\n",
     "        scrapper = WaterstonesScrapper()\n",
