--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -167,7 +167,7 @@
     "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    scrapper_method()"
+    "    scrapper_met"
    ]
   }
  ],
