--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -12,14 +12,15 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "import requests\n",
     "from uuid import uuid4\n",
-    "from datetime import datetime\n",
     "import tempfile\n",
-    "import os"
+    "import os\n",
+    "import json\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,18 +114,20 @@
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
     "                list_of_hmtl_links.append(link)\n",
-    "                \n",
+    "        \n",
     "        return (list_of_hmtl_links)\n",
     "    \n",
     "    def scrape_links_and_store_text_image_data(self,):\n",
     "        combined_list_of_html_list = self.get_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
     "        for element in combined_list_of_html_list:\n",
-    "            dict_properties = {'IDS':[],'ISBNS':[],'Names': [], 'Authors': [], 'Publishers': [], 'Prices': [], 'Book_Formats':[], 'Descriptions': [], 'Timestamps':[]}\n",
+    "            dict_properties = {'IDS':[], 'Timestamps':[],'ISBNS':[],'Names': [], 'Authors': [], 'Publishers': [], 'Book_Formats':[], 'Descriptions': [],}\n",
     "            self.driver.get(element)\n",
     "            image_ids = str(uuid4())\n",
     "            time.sleep(10)\n",
     "            dict_properties['IDS'].append(image_ids)\n",
+    "            timestamps = self.time_stamps_formated\n",
+    "            dict_properties['Timestamps'].append(timestamps)\n",
     "            isbn =self.driver.find_element(by=By.XPATH, value='//span[contains(@itemprop,\"isbn\")]').get_attribute(\"textContent\")\n",
     "            dict_properties['ISBNS'].append(isbn)\n",
     "            name = self.driver.find_element(by=By.XPATH, value='//span[@class=\"book-title\"]').text\n",
@@ -133,13 +136,10 @@
     "            dict_properties['Authors'].append(author)\n",
     "            publisher = self.driver.find_element(by=By.XPATH, value='//span[contains(@itemprop,\"publisher\")]').get_attribute(\"textContent\")\n",
     "            dict_properties['Publishers'].append(publisher)\n",
-    "            price = self.driver.find_element(by=By.XPATH, value='//div[@class=\"price\"]').text\n",
-    "            dict_properties['Prices'].append(price)\n",
     "            book_format =  self.driver.find_element(by=By.XPATH, value='//span[@class=\"name\"]').text\n",
     "            dict_properties['Book_Formats'].append(book_format)\n",
     "            description= self.driver.find_element(by=By.XPATH, value='//div[@class=\"tabs-content-container clearfix\"]//div[@itemprop=\"description\"]').text\n",
     "            dict_properties['Descriptions'].append(description)\n",
-    "            timestamps = self.time_stamps_formated\n",
     "            image = self.driver.find_element(by=By.XPATH, value='//div[@class=\"book-image-main\"]/img')\n",
     "            img = image.get_attribute('src')\n",
     "            img_content = requests.get(img).content\n",
@@ -153,8 +153,8 @@
     "        return big_list_of_data_dictionaries\n",
     "    \n",
     "    def save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
-    "        with open(\"raw_data/data.json\", mode=\"w\") as file:\n",
-    "            file.write(str(big_list_of_data_dictionaries))   \n",
+    "        with open(\"raw_data/data.json\", mode=\"w\", encoding= \"utf-8\") as file:\n",
+    "            file.write(json.dumps((big_list_of_data_dictionaries), default=str))   \n",
     "    \n",
     "def scrapper_method():\n",
     "    scrapper = WaterstonesScrapper()\n",
