second commit - Milestone 2

--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "        self.manga_images_directory ='raw_data/images/manga'\n",
     "        self.parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
     "        self.time_stamps = datetime.now()\n",
-    "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
+    "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
+    "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
+    "\n",
     "\n",
     "    def create_directory(self,):\n",
     "        if not os.path.exists(\"raw_data\"):\n",
@@ -103,7 +105,7 @@
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
-    "        for element in range (2,6):\n",
+    "        for element in range (2,3):\n",
     "            list_of_manga_page_links.append(f'{current_url}{element}')\n",
     "            self.driver.get(current_url)\n",
     "        for element in list_of_manga_page_links:\n",
@@ -143,7 +145,7 @@
     "            image = self.driver.find_element(by=By.XPATH, value='//div[@class=\"book-image-main\"]/img')\n",
     "            img = image.get_attribute('src')\n",
     "            img_content = requests.get(img).content\n",
-    "            name = 'raw_data/images/manga/' +f'{self.time_stamps_formated}_' + f'{image_ids}' + '.jpg'\n",
+    "            name = 'raw_data/images/manga/' +f'{self.date}_' + f'{image_ids}' + '.jpg'\n",
     "            with open (name,'wb') as handler:\n",
     "                handler.write(img_content)\n",
     "            big_list_of_data_dictionaries.append(dict_properties)\n",
