--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -86,7 +86,7 @@
     "        manga_page_1 = manga_page[0]\n",
     "        return(manga_page_1)\n",
     "\n",
-    "    def get_links_manga_page_1(self):\n",
+    "    def get_website_links_manga_page_1(self):\n",
     "        navigate_to_manga_page_1 = self.navigate_to_manga_page_1()\n",
     "        self.driver.get(navigate_to_manga_page_1)\n",
     "        current_url = self.driver.current_url\n",
@@ -100,7 +100,7 @@
     "        self.driver.get(link)\n",
     "        return (list_of_hmtl_links,current_url)\n",
     "    \n",
-    "    def get_links_manga_page_2_to_page_5(self,):\n",
+    "    def get_website_links_manga_page_2_to_page_5(self,):\n",
     "        list_of_hmtl_links,current_url = self.get_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
@@ -120,9 +120,9 @@
     "        return (list_of_hmtl_links)\n",
     "    \n",
     "    def scrape_links_and_store_text_image_data(self,):\n",
-    "        combined_list_of_html_list = self.get_links_manga_page_2_to_page_5()\n",
+    "        combined_list_of_html_links = self.get_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
-    "        for element in combined_list_of_html_list:\n",
+    "        for element in combined_list_of_html_links:\n",
     "            dict_properties = {'IDS':[], 'Timestamps':[],'ISBNS':[],'Names': [], 'Authors': [], 'Publishers': [], 'Book_Formats':[], 'Descriptions': [],}\n",
     "            self.driver.get(element)\n",
     "            image_ids = str(uuid4())\n",
@@ -163,8 +163,8 @@
     "    scrapper.create_directory()\n",
     "    scrapper.accept_cookies()\n",
     "    scrapper.navigate_to_manga_page_1()\n",
-    "    scrapper.get_links_manga_page_1()\n",
-    "    scrapper.get_links_manga_page_2_to_page_5()\n",
+    "    scrapper.get_website_links_manga_page_1()\n",
+    "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
     "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "if __name__ == '__main__':\n",
