--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -2,30 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "import time\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "import requests\n",
     "from uuid import uuid4\n",
-    "import tempfile\n",
     "import os\n",
-    "import json\n",
-    "from datetime import datetime"
+    "import requests\n",
+    "import time\n",
+    "import tempfile\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "class WaterstonesScrapper:\n",
+    "    '''\n",
+    "        This class represents the process of using selenium to access the manga book section on waterstones,\n",
+    "        and to define methods take in hmtl elements to scrape and store text and image data from each book on the first 5 pages.\n",
+    "\n",
+    "        Attributes:\n",
+    "            driver: initalises the webdriver.chrome method to drive to the waterstones website.\n",
+    "            raw_data_dictionary: creates folder directory to store data.\n",
+    "            images_directory: creates folder directory to store image data.\n",
+    "            manga_images_directory : creates folder directory to store image data from the manga section.\n",
+    "            parent_directory : parent directory to where project is saved.\n",
+    "            time_stamps: intialises the datetime.now() method which returns the current date and time.\n",
+    "            time_stamps_formated: intialises the strftime.() method which returns the date and current time in string format.\n",
+    "            date: intialises the strftime.() method which returns the date in string format.\n",
+    "    '''\n",
     "    def __init__(self,):\n",
+    "        '''\n",
+    "        See help(WaterstoneScrapper) for accurate signature\n",
+    "        '''\n",
     "        self.driver = webdriver.Chrome() \n",
     "        self.driver.get(\"https://www.waterstones.com/\")\n",
     "        self.raw_data_directory = 'raw_data/'\n",
@@ -33,11 +50,12 @@
     "        self.manga_images_directory ='raw_data/images/manga'\n",
     "        self.parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
     "        self.time_stamps = datetime.now()\n",
-    "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
     "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
+    "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
+    "   \n",
+    "    pass\n",
     "\n",
-    "\n",
-    "    def create_directory(self,):\n",
+    "    def __create_directory(self,):\n",
     "        if not os.path.exists(\"raw_data\"):\n",
     "            raw_data_directory = self.raw_data_directory\n",
     "            images_directory = self.images_directory\n",
@@ -49,8 +67,9 @@
     "            os.mkdir(path)\n",
     "            path = os.path.join(parent_directory, manga_images_directory)\n",
     "            os.mkdir(path)\n",
+    "    pass\n",
     "    \n",
-    "    def accept_cookies(self):\n",
+    "    def __accept_cookies(self):\n",
     "            try:\n",
     "                accept_cookies_button = self.driver.find_element(by=By.XPATH, value='//*[@id=\"onetrust-accept-btn-handler\"]')\n",
     "                accept_cookies_button.click()\n",
@@ -62,7 +81,7 @@
     "            except:\n",
     "                pass\n",
     "\n",
-    "    def navigate_to_manga_page_1(self):\n",
+    "    def __navigate_to_manga_page_1(self):\n",
     "        manga_a_tag =  self.driver.find_elements(by=By.XPATH, value='//a[@class=\"name\"]')\n",
     "        a_tag_links = []\n",
     "        for element in manga_a_tag:\n",
@@ -85,9 +104,10 @@
     "                manga_page.append(element)\n",
     "        manga_page_1 = manga_page[0]\n",
     "        return(manga_page_1)\n",
+    "    pass\n",
     "\n",
-    "    def get_website_links_manga_page_1(self):\n",
-    "        navigate_to_manga_page_1 = self.navigate_to_manga_page_1()\n",
+    "    def __get_website_links_manga_page_1(self,):\n",
+    "        navigate_to_manga_page_1 = self.__navigate_to_manga_page_1()\n",
     "        self.driver.get(navigate_to_manga_page_1)\n",
     "        current_url = self.driver.current_url\n",
     "        time.sleep(3)\n",
@@ -99,13 +119,14 @@
     "            list_of_hmtl_links.append(link)\n",
     "        self.driver.get(link)\n",
     "        return (list_of_hmtl_links,current_url)\n",
+    "    pass\n",
     "    \n",
-    "    def get_website_links_manga_page_2_to_page_5(self,):\n",
-    "        list_of_hmtl_links,current_url = self.get_links_manga_page_1()\n",
+    "    def __get_website_links_manga_page_2_to_page_5(self,):\n",
+    "        list_of_hmtl_links,current_url = self.__get_website_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
-    "        for element in range (2,6):\n",
+    "        for element in range (2,3):\n",
     "            list_of_manga_page_links.append(f'{current_url}{element}')\n",
     "            self.driver.get(current_url)\n",
     "        for element in list_of_manga_page_links:\n",
@@ -116,11 +137,11 @@
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
     "                list_of_hmtl_links.append(link)\n",
-    "        \n",
     "        return (list_of_hmtl_links)\n",
+    "    pass\n",
     "    \n",
-    "    def scrape_links_and_store_text_image_data(self,):\n",
-    "        combined_list_of_html_links = self.get_links_manga_page_2_to_page_5()\n",
+    "    def __scrape_links_and_store_text_image_data(self,):\n",
+    "        combined_list_of_html_links = self.__get_website_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
     "        for element in combined_list_of_html_links:\n",
     "            dict_properties = {'IDS':[], 'Timestamps':[],'ISBNS':[],'Names': [], 'Authors': [], 'Publishers': [], 'Book_Formats':[], 'Descriptions': [],}\n",
@@ -149,26 +170,28 @@
     "            with open (name,'wb') as handler:\n",
     "                handler.write(img_content)\n",
     "            big_list_of_data_dictionaries.append(dict_properties)\n",
-    "        \n",
     "        self.driver.quit()\n",
-    "        \n",
     "        return big_list_of_data_dictionaries\n",
-    "    \n",
-    "    def save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
+    "    pass\n",
+    "\n",
+    "    def __save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
     "        with open(\"raw_data/data.json\", mode=\"w\", encoding= \"utf-8\") as file:\n",
     "            file.write(json.dumps((big_list_of_data_dictionaries), default=str))   \n",
-    "    \n",
-    "def scrapper_method():\n",
+    "    pass\n",
+    "\n",
+    "def __scrapper_method():\n",
     "    scrapper = WaterstonesScrapper()\n",
-    "    scrapper.create_directory()\n",
-    "    scrapper.accept_cookies()\n",
-    "    scrapper.navigate_to_manga_page_1()\n",
-    "    scrapper.get_website_links_manga_page_1()\n",
-    "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
-    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
+    "    scrapper._WaterstonesScrapper__create_directory()\n",
+    "    scrapper._WaterstonesScrapper__accept_cookies()\n",
+    "    scrapper._WaterstonesScrapper__navigate_to_manga_page_1()\n",
+    "    scrapper._WaterstonesScrapper__get_website_links_manga_page_1()\n",
+    "    scrapper._WaterstonesScrapper__get_website_links_manga_page_2_to_page_5()\n",
+    "    scrape = scrapper._WaterstonesScrapper__save_raw_dictionaries(scrapper._WaterstonesScrapper__scrape_links_and_store_text_image_data())\n",
+    "\n",
+    "pass\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    scrapper_method()"
+    "    __scrapper_method()"
    ]
   }
  ],
