fouth commit - Mils

--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
     "        '''\n",
     "        self.driver = webdriver.Chrome() \n",
     "        self.driver.get(\"https://www.waterstones.com/\")\n",
-    "        self.raw_data_directory = 'raw_data/'\n",
-    "        self.images_directory ='raw_data/images' \n",
-    "        self.manga_images_directory ='raw_data/images/manga'\n",
-    "        self.parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
+    "        self._raw_data_directory = 'raw_data/'\n",
+    "        self._images_directory ='raw_data/images' \n",
+    "        self._manga_images_directory ='raw_data/images/manga'\n",
+    "        self._parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
     "        self.time_stamps = datetime.now()\n",
     "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
     "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
     "   \n",
     "    pass\n",
     "\n",
-    "    def __create_directory(self,):\n",
+    "    def create_directory(self,):\n",
     "        if not os.path.exists(\"raw_data\"):\n",
     "            raw_data_directory = self.raw_data_directory\n",
     "            images_directory = self.images_directory\n",
@@ -69,7 +69,7 @@
     "            os.mkdir(path)\n",
     "    pass\n",
     "    \n",
-    "    def __accept_cookies(self):\n",
+    "    def accept_cookies(self):\n",
     "            try:\n",
     "                accept_cookies_button = self.driver.find_element(by=By.XPATH, value='//*[@id=\"onetrust-accept-btn-handler\"]')\n",
     "                accept_cookies_button.click()\n",
@@ -81,7 +81,7 @@
     "            except:\n",
     "                pass\n",
     "\n",
-    "    def __navigate_to_manga_page_1(self):\n",
+    "    def navigate_to_manga_page_1(self):\n",
     "        manga_a_tag =  self.driver.find_elements(by=By.XPATH, value='//a[@class=\"name\"]')\n",
     "        a_tag_links = []\n",
     "        for element in manga_a_tag:\n",
@@ -106,8 +106,8 @@
     "        return(manga_page_1)\n",
     "    pass\n",
     "\n",
-    "    def __get_website_links_manga_page_1(self,):\n",
-    "        navigate_to_manga_page_1 = self.__navigate_to_manga_page_1()\n",
+    "    def get_website_links_manga_page_1(self,):\n",
+    "        navigate_to_manga_page_1 = self.navigate_to_manga_page_1()\n",
     "        self.driver.get(navigate_to_manga_page_1)\n",
     "        current_url = self.driver.current_url\n",
     "        time.sleep(3)\n",
@@ -121,8 +121,8 @@
     "        return (list_of_hmtl_links,current_url)\n",
     "    pass\n",
     "    \n",
-    "    def __get_website_links_manga_page_2_to_page_5(self,):\n",
-    "        list_of_hmtl_links,current_url = self.__get_website_links_manga_page_1()\n",
+    "    def get_website_links_manga_page_2_to_page_5(self,):\n",
+    "        list_of_hmtl_links,current_url = self.get_website_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
@@ -137,11 +137,12 @@
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
     "                list_of_hmtl_links.append(link)\n",
+    "        print (list_of_hmtl_links)\n",
     "        return (list_of_hmtl_links)\n",
     "    pass\n",
     "    \n",
-    "    def __scrape_links_and_store_text_image_data(self,):\n",
-    "        combined_list_of_html_links = self.__get_website_links_manga_page_2_to_page_5()\n",
+    "    def scrape_links_and_store_text_image_data(self,):\n",
+    "        combined_list_of_html_links = self.get_website_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
     "        for element in combined_list_of_html_links:\n",
     "            dict_properties = {'IDS':[], 'Timestamps':[],'ISBNS':[],'Names': [], 'Authors': [], 'Publishers': [], 'Book_Formats':[], 'Descriptions': [],}\n",
@@ -174,24 +175,24 @@
     "        return big_list_of_data_dictionaries\n",
     "    pass\n",
     "\n",
-    "    def __save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
+    "    def save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
     "        with open(\"raw_data/data.json\", mode=\"w\", encoding= \"utf-8\") as file:\n",
     "            file.write(json.dumps((big_list_of_data_dictionaries), default=str))   \n",
     "    pass\n",
     "\n",
-    "def __scrapper_method():\n",
+    "def scrapper_method():\n",
     "    scrapper = WaterstonesScrapper()\n",
-    "    scrapper._WaterstonesScrapper__create_directory()\n",
-    "    scrapper._WaterstonesScrapper__accept_cookies()\n",
-    "    scrapper._WaterstonesScrapper__navigate_to_manga_page_1()\n",
-    "    scrapper._WaterstonesScrapper__get_website_links_manga_page_1()\n",
-    "    scrapper._WaterstonesScrapper__get_website_links_manga_page_2_to_page_5()\n",
-    "    scrape = scrapper._WaterstonesScrapper__save_raw_dictionaries(scrapper._WaterstonesScrapper__scrape_links_and_store_text_image_data())\n",
+    "    scrapper.create_directory()\n",
+    "    scrapper.accept_cookies()\n",
+    "    scrapper.navigate_to_manga_page_1()\n",
+    "    scrapper.get_website_links_manga_page_1()\n",
+    "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
+    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "pass\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    __scrapper_method()"
+    "    scrapper_method()"
    ]
   }
  ],
