fouth commit - Milestone 3

--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -39,7 +39,7 @@
     "            time_stamps_formated: intialises the strftime.() method which returns the date and current time in string format.\n",
     "            date: intialises the strftime.() method which returns the date in string format.\n",
     "    '''\n",
-    "    def __init__(self,):\n",
+    "    def __init__(self,)\n",
     "        '''\n",
     "        See help(WaterstoneScrapper) for accurate signature\n",
     "        '''\n",
