--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -39,6 +39,7 @@
     "            time_stamps_formated: intialises the strftime.() method which returns the date and current time in string format.\n",
     "            date: intialises the strftime.() method which returns the date in string format.\n",
     "    '''\n",
+    "    \n",
     "    def __init__(self,):\n",
     "        '''\n",
     "        See help(WaterstoneScrapper) for accurate signature\n",
@@ -56,6 +57,13 @@
     "    pass\n",
     "\n",
     "    def create_directory(self,):\n",
+    "        '''\n",
+    "        This function is used create the folder directories to store the json and image data. \n",
+    "        The function only creates the folders if they do not already exist.\n",
+    "\n",
+    "        Returns:\n",
+    "            str: the string representation of the date.\n",
+    "        '''\n",
     "        if not os.path.exists(\"raw_data\"):\n",
     "            raw_data_directory = self.raw_data_directory\n",
     "            images_directory = self.images_directory\n",
@@ -70,18 +78,29 @@
     "    pass\n",
     "    \n",
     "    def accept_cookies(self):\n",
-    "            try:\n",
+    "        '''\n",
+    "        This function is used to the find the html element of the accept cookies button \n",
+    "        on the waterstones website and to click on the accept cookies button.\n",
+    "        '''                            \n",
+    "        try:\n",
+    "            accept_cookies_button = self.driver.find_element(by=By.XPATH, value='//*[@id=\"onetrust-accept-btn-handler\"]')\n",
+    "            accept_cookies_button.click()\n",
+    "            time.sleep(1)\n",
+    "        except AttributeError: \n",
     "                accept_cookies_button = self.driver.find_element(by=By.XPATH, value='//*[@id=\"onetrust-accept-btn-handler\"]')\n",
     "                accept_cookies_button.click()\n",
     "                time.sleep(1)\n",
-    "            except AttributeError: \n",
-    "                accept_cookies_button = self.driver.find_element(by=By.XPATH, value='//*[@id=\"onetrust-accept-btn-handler\"]')\n",
-    "                accept_cookies_button.click()\n",
-    "                time.sleep(1)\n",
-    "            except:\n",
-    "                pass\n",
+    "        except:\n",
+    "            pass\n",
     "\n",
     "    def navigate_to_manga_page_1(self):\n",
+    "        '''\n",
+    "        This function is used to navigate to the manga book section on waterstone.com \n",
+    "        and then to page 1 of the see more manga section.\n",
+    "\n",
+    "        Returns:\n",
+    "            str: returns the webline of the page 1 of the see more manga section in string format. \n",
+    "        '''\n",
     "        manga_a_tag =  self.driver.find_elements(by=By.XPATH, value='//a[@class=\"name\"]')\n",
     "        a_tag_links = []\n",
     "        for element in manga_a_tag:\n",
@@ -107,6 +126,14 @@
     "    pass\n",
     "\n",
     "    def get_website_links_manga_page_1(self,):\n",
+    "        '''\n",
+    "        This function is used to  extract and store the website links of each manga book\n",
+    "        on page 1 of the see more manga section.\n",
+    "        \n",
+    "        Returns:\n",
+    "            tupple: returns the list of the weblinks for each book on page 1 and\n",
+    "            the weblink of the current page 1 url in string format.\n",
+    "        '''\n",
     "        navigate_to_manga_page_1 = self.navigate_to_manga_page_1()\n",
     "        self.driver.get(navigate_to_manga_page_1)\n",
     "        current_url = self.driver.current_url\n",
@@ -122,6 +149,15 @@
     "    pass\n",
     "    \n",
     "    def get_website_links_manga_page_2_to_page_5(self,):\n",
+    "        '''\n",
+    "        This function is used to  extract and store the website links of each manga book\n",
+    "        from pages 2 to page 5 and append to a list which contains the weblinks for each book\n",
+    "        from page 1. \n",
+    "        \n",
+    "        Returns:\n",
+    "            list: returns the list of the weblinks for each book from page 1 to page 5.\n",
+    " \n",
+    "        '''\n",
     "        list_of_hmtl_links,current_url = self.get_website_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
@@ -142,6 +178,14 @@
     "    pass\n",
     "    \n",
     "    def scrape_links_and_store_text_image_data(self,):\n",
+    "        '''\n",
+    "        This function is used extract tex data from each weblink page of the books and store in a dictory.\n",
+    "        This function also extracts the image data for each book and stores the image in jpg format.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: returns a list which contains a dictionary of data for each book.\n",
+    " \n",
+    "        '''\n",
     "        combined_list_of_html_links = self.get_website_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
     "        for element in combined_list_of_html_links:\n",
@@ -176,6 +220,11 @@
     "    pass\n",
     "\n",
     "    def save_raw_dictionaries(self,big_list_of_data_dictionaries):\n",
+    "        '''\n",
+    "        This function is used to save the list which contains the dictionaries in json format\n",
+    "\n",
+    "        \n",
+    "        '''\n",
     "        with open(\"raw_data/data.json\", mode=\"w\", encoding= \"utf-8\") as file:\n",
     "            file.write(json.dumps((big_list_of_data_dictionaries), default=str))   \n",
     "    pass\n",
@@ -187,7 +236,7 @@
     "    scrapper.navigate_to_manga_page_1()\n",
     "    scrapper.get_website_links_manga_page_1()\n",
     "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
-    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
+    "    #scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "pass\n",
     "\n",
