--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -223,7 +223,6 @@
     "        '''\n",
     "        This function is used to save the list which contains the dictionaries in json format\n",
     "\n",
-    "        \n",
     "        '''\n",
     "        with open(\"raw_data/data.json\", mode=\"w\", encoding= \"utf-8\") as file:\n",
     "            file.write(json.dumps((big_list_of_data_dictionaries), default=str))   \n",
@@ -236,7 +235,7 @@
     "    scrapper.navigate_to_manga_page_1()\n",
     "    scrapper.get_website_links_manga_page_1()\n",
     "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
-    "    #scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
+    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "pass\n",
     "\n",
