--- a/unit_tests.ipynb
+++ b/unit_tests.ipynb
@@ -5,7 +5,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from product import Product\n",
+    "import unittest"
+   ]
   }
  ],
  "metadata": {
