--- a/Milestones/Milestone_3.ipynb
+++ b/Milestones/Milestone_3.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.waterstones.com/category/graphic-novels-manga/manga?page=1\n"
+     ]
+    }
+   ],
    "source": [
     "class WaterstonesScrapper:\n",
     "    '''\n",
@@ -122,6 +130,7 @@
     "            if element == 'https://www.waterstones.com/category/graphic-novels-manga/manga?page=1':\n",
     "                manga_page.append(element)\n",
     "        manga_page_1 = manga_page[0]\n",
+    "        print (manga_page_1)\n",
     "        return(manga_page_1)\n",
     "    pass\n",
     "\n",
@@ -233,9 +242,9 @@
     "    scrapper.create_directory()\n",
     "    scrapper.accept_cookies()\n",
     "    scrapper.navigate_to_manga_page_1()\n",
-    "    scrapper.get_website_links_manga_page_1()\n",
-    "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
-    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
+    "    #scrapper.get_website_links_manga_page_1()\n",
+    "    #scrapper.get_website_links_manga_page_2_to_page_5()\n",
+    "    #scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "pass\n",
     "\n",
