--- a/Milestones/Milestone_1.ipynb
+++ b/Milestones/Milestone_1.ipynb
@@ -66,15 +66,15 @@
     "        time.sleep(3)\n",
     "        self.driver.find_element('xpath', '//body').send_keys(Keys.END)\n",
     "        manga_page_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
-    "        list_of_hmtl_links = []\n",
+    "        list_of_html_links = []\n",
     "        for element in manga_page_container:\n",
     "            link = element.get_attribute('href')\n",
-    "            list_of_hmtl_links.append(link)\n",
+    "            list_of_html_links.append(link)\n",
     "        self.driver.get(link)\n",
-    "        return (list_of_hmtl_links,current_url)\n",
+    "        return (list_of_html_links,current_url)\n",
     "    \n",
     "    def get_links_manga_page_2_to_page_5(self,):\n",
-    "        list_of_hmtl_links,current_url = self.get_links_manga_page_1()\n",
+    "        list_of_html_links,current_url = self.get_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
@@ -88,11 +88,11 @@
     "            manga_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
-    "                list_of_hmtl_links.append(link)\n",
+    "                list_of_html_links.append(link)\n",
     "        \n",
     "        self.driver.quit()\n",
     "\n",
-    "        return (list_of_hmtl_links)\n",
+    "        return (list_of_html_links)\n",
     "    \n",
     "def scrapper_method():\n",
     "        scrapper = WaterstonesScrapper()\n",
