--- a/Milestones/Milestone_1.ipynb
+++ b/Milestones/Milestone_1.ipynb
@@ -9,7 +9,7 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
-    "from selenium.webdriver.common.keys import Keys"
+    "from selenium.webdriver.common.keys import Key"
    ]
   },
   {
