First commit - Uploading Milestone 1 python script.

--- a/Milestones/Milestone_1.ipynb
+++ b/Milestones/Milestone_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
-    "from selenium.webdriver.common.keys import Key"
+    "from selenium.webdriver.common.keys import Keys"
    ]
   },
   {
