--- a/Milestones/Milestone_2.ipynb
+++ b/Milestones/Milestone_2.ipynb
@@ -34,7 +34,7 @@
     "        self.parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
     "        self.time_stamps = datetime.now()\n",
     "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
-    "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
+    "        self.time_stamps_formatted = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
     "\n",
     "\n",
     "    def create_directory(self,):\n",
@@ -93,15 +93,15 @@
     "        time.sleep(3)\n",
     "        self.driver.find_element('xpath', '//body').send_keys(Keys.END)\n",
     "        manga_page_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
-    "        list_of_hmtl_links = []\n",
+    "        list_of_html_links = []\n",
     "        for element in manga_page_container:\n",
     "            link = element.get_attribute('href')\n",
-    "            list_of_hmtl_links.append(link)\n",
+    "            list_of_html_links.append(link)\n",
     "        self.driver.get(link)\n",
-    "        return (list_of_hmtl_links,current_url)\n",
+    "        return (list_of_html_links,current_url)\n",
     "    \n",
     "    def get_links_manga_page_2_to_page_5(self,):\n",
-    "        list_of_hmtl_links,current_url = self.get_links_manga_page_1()\n",
+    "        list_of_html_links,current_url = self.get_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
@@ -115,9 +115,9 @@
     "            manga_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
-    "                list_of_hmtl_links.append(link)\n",
+    "                list_of_html_links.append(link)\n",
     "        \n",
-    "        return (list_of_hmtl_links)\n",
+    "        return (list_of_html_links)\n",
     "    \n",
     "    def scrape_links_and_store_text_image_data(self,):\n",
     "        combined_list_of_html_list = self.get_links_manga_page_2_to_page_5()\n",
@@ -128,7 +128,7 @@
     "            image_ids = str(uuid4())\n",
     "            time.sleep(10)\n",
     "            dict_properties['IDS'].append(image_ids)\n",
-    "            timestamps = self.time_stamps_formated\n",
+    "            timestamps = self.time_stamps_formatted\n",
     "            dict_properties['Timestamps'].append(timestamps)\n",
     "            isbn =self.driver.find_element(by=By.XPATH, value='//span[contains(@itemprop,\"isbn\")]').get_attribute(\"textContent\")\n",
     "            dict_properties['ISBNS'].append(isbn)\n",
