Second commit - Uploading Milestone 2 python script.

--- a/Milestones/Milestone_2.ipynb
+++ b/Milestones/Milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'raw_data/images/manga/2022-11-25_aa3d6df5-2861-4ab4-9203-e019467d3efd.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\kenza\\OneDrive\\Desktop\\GitBash\\data-collection-pipeline\\Milestones\\Milestone_2.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 144>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=141'>142</a>\u001b[0m     scrape \u001b[39m=\u001b[39m scrapper\u001b[39m.\u001b[39msave_raw_dictionaries(scrapper\u001b[39m.\u001b[39mscrape_links_and_store_text_image_data())\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=143'>144</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=144'>145</a>\u001b[0m     scrapper_method()\n",
+      "\u001b[1;32mc:\\Users\\kenza\\OneDrive\\Desktop\\GitBash\\data-collection-pipeline\\Milestones\\Milestone_2.ipynb Cell 2\u001b[0m in \u001b[0;36mscrapper_method\u001b[1;34m()\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=139'>140</a>\u001b[0m scrapper\u001b[39m.\u001b[39mget_links_manga_page_1()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=140'>141</a>\u001b[0m scrapper\u001b[39m.\u001b[39mget_links_manga_page_2_to_page_5()\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=141'>142</a>\u001b[0m scrape \u001b[39m=\u001b[39m scrapper\u001b[39m.\u001b[39msave_raw_dictionaries(scrapper\u001b[39m.\u001b[39;49mscrape_links_and_store_text_image_data())\n",
+      "\u001b[1;32mc:\\Users\\kenza\\OneDrive\\Desktop\\GitBash\\data-collection-pipeline\\Milestones\\Milestone_2.ipynb Cell 2\u001b[0m in \u001b[0;36mWaterstonesScrapper.scrape_links_and_store_text_image_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=120'>121</a>\u001b[0m img_content \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mget(img)\u001b[39m.\u001b[39mcontent\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=121'>122</a>\u001b[0m name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mraw_data/images/manga/\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdate\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mimage_ids\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.jpg\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=122'>123</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m (name,\u001b[39m'\u001b[39;49m\u001b[39mwb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m handler:\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=123'>124</a>\u001b[0m     handler\u001b[39m.\u001b[39mwrite(img_content)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/Milestones/Milestone_2.ipynb#W1sZmlsZQ%3D%3D?line=124'>125</a>\u001b[0m big_list_of_data_dictionaries\u001b[39m.\u001b[39mappend(dict_properties)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'raw_data/images/manga/2022-11-25_aa3d6df5-2861-4ab4-9203-e019467d3efd.jpg'"
+     ]
+    }
+   ],
    "source": [
     "class WaterstonesScrapper:\n",
     "    def __init__(self,):\n",
