Second commit - Uploading Milestone 2 python script.

--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from selenium import webdrive\n",
+    "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "import time\n",
     "from selenium.webdriver.common.keys import Keys\n",
