--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -33,18 +33,16 @@
    "source": [
     "class WaterstonesScrapper:\n",
     "    '''\n",
-    "        This class represents the process of using selenium to access the manga book section on waterstones,\n",
-    "        and to define methods take in hmtl elements to scrape and store text and image data from each book on the first 5 pages.\n",
+    "        This class represents the process of using selenium webdriver to drive to waterstones.com and to scrape text and image data from the manga book section.\n",
+    "        Methods have been defined to take in html elements to scrape the data for the first 5 pages of the see more manga section.\n",
     "\n",
     "        Attributes:\n",
-    "            driver: initalises the webdriver.chrome method to drive to the waterstones website.\n",
+    "            driver: initialises the webdriver.chrome method to drive to the waterstones website.\n",
     "            raw_data_dictionary: creates folder directory to store data.\n",
     "            images_directory: creates folder directory to store image data.\n",
-    "            manga_images_directory : creates folder directory to store image data from the manga section.\n",
-    "            parent_directory : parent directory to where project is saved.\n",
+    "            parent_directory : parent directory of the working folder location.\n",
     "            time_stamps: intialises the datetime.now() method which returns the current date and time.\n",
-    "            time_stamps_formated: intialises the strftime.() method which returns the date and current time in string format.\n",
-    "            date: intialises the strftime.() method which returns the date in string format.\n",
+    "            time_stamps_formated: intialises the strftime.() method which returns the current date and time in string format.\n",
     "    '''\n",
     "    \n",
     "    def __init__(self,):\n",
@@ -102,11 +100,11 @@
     "\n",
     "    def navigate_to_manga_page_1(self):\n",
     "        '''\n",
-    "        This function is used to navigate to the manga book section on waterstone.com \n",
+    "        This function is used to drive to the manga book section on waterstone.com \n",
     "        and then to page 1 of the see more manga section.\n",
     "\n",
     "        Returns:\n",
-    "            str: returns the webline of the page 1 of the see more manga section in string format. \n",
+    "            str: returns the page 1 web-link of the see more manga section in string format. \n",
     "        '''\n",
     "        manga_a_tag =  self.driver.find_elements(by=By.XPATH, value='//a[@class=\"name\"]')\n",
     "        a_tag_links = []\n",
@@ -139,8 +137,8 @@
     "        on page 1 of the see more manga section.\n",
     "        \n",
     "        Returns:\n",
-    "            tupple: returns the list of the weblinks for each book on page 1 and\n",
-    "            the weblink of the current page 1 url in string format.\n",
+    "            tuple: returns the list of the web-links for each book on page 1 and\n",
+    "            the web-link of the current page 1 url in string format.\n",
     "        '''\n",
     "        navigate_to_manga_page_1 = self.navigate_to_manga_page_1()\n",
     "        self.driver.get(navigate_to_manga_page_1)\n",
@@ -148,25 +146,25 @@
     "        time.sleep(3)\n",
     "        self.driver.find_element('xpath', '//body').send_keys(Keys.END)\n",
     "        manga_page_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
-    "        list_of_hmtl_links = []\n",
+    "        list_of_html_links = []\n",
     "        for element in manga_page_container:\n",
     "            link = element.get_attribute('href')\n",
-    "            list_of_hmtl_links.append(link)\n",
+    "            list_of_html_links.append(link)\n",
     "        self.driver.get(link)\n",
-    "        return (list_of_hmtl_links,current_url)\n",
+    "        return (list_of_html_links,current_url)\n",
     "    pass\n",
     "    \n",
     "    def get_website_links_manga_page_2_to_page_5(self,):\n",
     "        '''\n",
-    "        This function is used to  extract and store the website links of each manga book\n",
-    "        from pages 2 to page 5 and append to a list which contains the weblinks for each book\n",
+    "        This function is used to  extract and store the web-links of each manga book\n",
+    "        from pages 2 to page 5 and append to a list which contains the web-links for each book\n",
     "        from page 1. \n",
     "        \n",
     "        Returns:\n",
-    "            list: returns the list of the weblinks for each book from page 1 to page 5.\n",
+    "            list: returns the list of the web-links for each book from page 1 to page 5.\n",
     " \n",
     "        '''\n",
-    "        list_of_hmtl_links,current_url = self.get_website_links_manga_page_1()\n",
+    "        list_of_html_links,current_url = self.get_website_links_manga_page_1()\n",
     "        current_url = current_url[0:63]\n",
     "        current_url = current_url + \"/page/\"\n",
     "        list_of_manga_page_links = []\n",
@@ -180,19 +178,19 @@
     "            manga_container = self.driver.find_elements(by=By.XPATH,value='//div[@class=\"image-wrap\"]/a')\n",
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
-    "                list_of_hmtl_links.append(link)\n",
-    "        print (list_of_hmtl_links)\n",
-    "        return (list_of_hmtl_links)\n",
+    "                list_of_html_links.append(link)\n",
+    "        print (list_of_html_links)\n",
+    "        return (list_of_html_links)\n",
     "    pass\n",
     "    \n",
     "    def scrape_links_and_store_text_image_data(self,):\n",
     "        '''\n",
-    "        This function is used extract tex data from each weblink page of the books and store in a dictory.\n",
-    "        This function also extracts the image data for each book and stores the image in jpg format.\n",
+    "        This function is used extract the text data from each web-link page of the books and store in a dictionary.\n",
+    "        This function also extracts the image data for each book and stores to the correct directory in jpg format.\n",
     "\n",
     "        Returns:\n",
     "            list: returns a list which contains a dictionary of data for each book.\n",
-    " \n",
+    "            \n",
     "        '''\n",
     "        combined_list_of_html_links = self.get_website_links_manga_page_2_to_page_5()\n",
     "        big_list_of_data_dictionaries=[]\n",
@@ -202,7 +200,7 @@
     "            image_ids = str(uuid4())\n",
     "            time.sleep(10)\n",
     "            dict_properties['IDS'].append(image_ids)\n",
-    "            timestamps = self.time_stamps_formated\n",
+    "            timestamps = self.time_stamps_formatted\n",
     "            dict_properties['Timestamps'].append(timestamps)\n",
     "            isbn =self.driver.find_element(by=By.XPATH, value='//span[contains(@itemprop,\"isbn\")]').get_attribute(\"textContent\")\n",
     "            dict_properties['ISBNS'].append(isbn)\n",
@@ -241,9 +239,9 @@
     "    scrapper.create_directory()\n",
     "    scrapper.accept_cookies()\n",
     "    scrapper.navigate_to_manga_page_1()\n",
-    "    #scrapper.get_website_links_manga_page_1()\n",
-    "    #scrapper.get_website_links_manga_page_2_to_page_5()\n",
-    "    #scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
+    "    scrapper.get_website_links_manga_page_1()\n",
+    "    scrapper.get_website_links_manga_page_2_to_page_5()\n",
+    "    scrape = scrapper.save_raw_dictionaries(scrapper.scrape_links_and_store_text_image_data())\n",
     "\n",
     "pass\n",
     "\n",
