Third commit - Uploading Milestone 3 python script.

--- a/Milestone_3.ipynb
+++ b/Milestone_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "        self._manga_images_directory ='raw_data/images/manga'\n",
     "        self._parent_directory = 'C:/Users/kenza/OneDrive/Desktop/GitBash/data-collection-pipeline/'\n",
     "        self.time_stamps = datetime.now()\n",
-    "        self.time_stamps_formated = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
+    "        self.time_stamps_formatted = self.time_stamps.strftime(\"%Y-%m-%d,%H:%M:%S\")\n",
     "        self.date = self.time_stamps.strftime(\"%Y-%m-%d\")\n",
     "   \n",
     "    pass\n",
@@ -127,7 +127,6 @@
     "            if element == 'https://www.waterstones.com/category/graphic-novels-manga/manga?page=1':\n",
     "                manga_page.append(element)\n",
     "        manga_page_1 = manga_page[0]\n",
-    "        print (manga_page_1)\n",
     "        return(manga_page_1)\n",
     "    pass\n",
     "\n",
@@ -179,7 +178,6 @@
     "            for element in manga_container:\n",
     "                link = element.get_attribute('href')\n",
     "                list_of_html_links.append(link)\n",
-    "        print (list_of_html_links)\n",
     "        return (list_of_html_links)\n",
     "    pass\n",
     "    \n",
